--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -14,7 +14,7 @@
     <div class='w-100 h-100 d-flex align-items-center flex-column justify-content-center text-center'>
       <h5 class='sk-dark-blue'>We are reviewing your application and will reach out to your shortly.</h5>
       <br>
-      <button class='btn btn-secondary mr-lg-3 mb-lg-0 mb-4' onclick='window.location.href = "/index"' style="width: 13em;margin-top:1%;" >Return To Index</button>
+      <button class='btn btn-secondary mr-lg-3 mb-lg-0 mb-4' onclick='window.location.href = "/home"' style="width: 13em;margin-top:1%;" >Return To Index</button> 
     </div>
   </div>
 {% endblock %}
